# espai

./: .env.example  Dockerfile  LICENSE  README.md  example.py  pyproject.toml
data/: README.md  combined-cleaned-personal-anon.csv  fields.csv
espai/: __init__.py  adjust.py  aggregate.py  analyses.py  config.py  fit.py  preprocess.py  robust_geomean.py
makedistribution_responses/: 0007a1b01bd2da26.json  000c2bf2baf0cae0.json  001641c27d54cb77.json  00182e8b28255c68.json  0021854e393cee27.json  002560f0a7fbe605.json  002c443b6a8b5dc5.json  003689ab060cb1cd.json  003840078e6f62c3.json  003c4bdc49ff287f.json  003e4912019da248.json  0043b0bb6ead5c21.json  004427837dc2aa0e.json  0045ffda1a3396d7.json  004dfb4a5452a591.json  0052f081fec991d1.json  006a2112c8e1c2e8.json  006dbd254f4e1090.json  00722dcd8d72824e.json  007246d11e23e740.json  00748efa68a3e542.json  0079cc8605817847.json  007a57905ae9ea7d.json  007e025f83e7f066.json  008461943944def5.json  009f7991730983d8.json  00ac1e836b5a7ff6.json  00add48255cb18e5.json  00b9c1b17ef84cf9.json  00bf8702fbb2d237.json  00c485d57d1aeb32.json  00c4ee60d1751af5.json  00c7dcfbe610ec8e.json  00cf190fba8c2cc0.json  00d22ea76ab11eb1.json  00d47a6eee9c7ef3.json  00e42dcfcc8da097.json  00e826a7f8d0f9d2.json  00ebd960b92599ae.json  00f94b7ef0d8df38.json  (+13668 more)
tests/: conftest.py  test_aggregate.py  test_analyses.py  test_anonymization.py  test_fields_interpretation.py  test_fit.py  test_flexible.py  test_generalized_gamma.py  test_replicate_aggreagted.py  test_replicate_gamma_fits.py  test_resampling.py  test_robust_geomean.py  test_weibull.py
(+5 files in other folders)
